discussion/kv_engine/177017/177017_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Simplify FlowControl locking mechanism

The FlowControl bufferSize and pendingControl members are strictly
related, as any change to the first requires the Consumer sending a
control message to the Producer for informing the latter of the new
FlowControl setup.

Here I replace the manual locking/unlocking and pair-updates of those
members with a folly::Synchronized<T>, where T is a class that embeds
the pair-updates internally. That makes the FlowControl state update
cleaner.

Change-Id: I1e320f74894f92bb381fad82ba3b6deeb2229d08

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-04 09:54:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 11:43:59.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47363/ : FAILURE

Failure of GoogleTest "CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.stream_closes/persistent_magma_full_eviction":

<pre>
[ RUN      ] CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.stream_closes/persistent_magma_full_eviction
2022-07-04T03:32:31.661390-07:00 CRITICAL (SynchronousEPEngine:default) MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.086801/magma.0/config.json.tmp: The process cannot access the file because it is being used by another process.
unknown file: error: C++ exception with description "MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.086801/magma.0/config.json.tmp: The process cannot access the file because it is being used by another process." thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.stream_closes/persistent_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=full_eviction" (21 ms)
CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.stream_closes/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47363/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18596/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:105:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("total_acked_bytes", ackedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:108:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("unacked_bytes", freedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.h:92:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<Buffer> buffer;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18596/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:105:18:
error: no matching member function for call to "addStat" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18596/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39808/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control.h:92:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28864/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferNo":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferNo
[2022-07-04T11:21:17.094Z] unknown file: Failure
[2022-07-04T11:21:17.094Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":13,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-04T11:21:17.094Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferNo, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (23 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28864/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21474/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21474/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17747/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20480/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19707/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8268/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
